minor changes added

--- a/drop_duplicates.ipynb
+++ b/drop_duplicates.ipynb
@@ -38,7 +38,7 @@
         "outputId": "77b8afe7-faf3-4a75-a356-059f39d6d5e2"
       },
       "source": [
-        "df.head()"
+        "df.head(5)"
       ],
       "execution_count": 3,
       "outputs": [
