--- a/scrape_twitter.ipynb
+++ b/scrape_twitter.ipynb
@@ -76,7 +76,7 @@
         "  x = x[0:4] + \"-\" + x[4:6] + \"-\" + x[6:]\n",
         "  print(x, increment_date(x))\n",
         "\n",
-        "  # Creating list to append tweet data to\n",
+        "  # Creating list to append tweets data to\n",
         "  tweets_list2 = {}\n",
         "\n",
         "  # Using TwitterSearchScraper to scrape data and append tweets to list\n",
